5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1672_1951.log
== TEST (2019-04-27 19:37:48) 
-- CODE:
X0=int(input("Digite Xo: "))
Y0=int(input("Digite Yo: "))
X1=int(input("Digite X1: "))
Y2=int(input("Digite Y2: "))
X2=int(input("Digite X2: "))
Y2=int(input("Digite Y2: "))
c=(X1 - X0)*(Y2-Y0)*(X2-X0)*(Y1-Y0)
if(c<0):
	mensagem ="A direita da reta"
	print(mensagem)
elif(c>0):
	mensagem="A esquerda da reta"
	print(mensagem)
elif(c==0):
	mensagem="Sobre a reta"
	print(mensagem)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    c=(X1 - X0)*(Y2-Y0)*(X2-X0)*(Y1-Y0)
NameError: name 'Y1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:39:19) 
-- CODE:
X0=int(input("Digite Xo: "))
Y0=int(input("Digite Yo: "))
X1=int(input("Digite X1: "))
Y1=int(input("Digite Y2: "))
X2=int(input("Digite X2: "))
Y2=int(input("Digite Y2: "))
c =(X1 - X0)*(Y2-Y0)*(X2-X0)*(Y1-Y0)
if(c<0):
	mensagem ="A direita da reta"
	print(mensagem)
elif(c>0):
	mensagem="A esquerda da reta"
	print(mensagem)
elif(c==0):
	mensagem="Sobre a reta"
	print(mensagem)


-- OUTPUT:
A esquerda da reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:40:00) 
-- CODE:
X0=float(input("Digite Xo: "))
Y0=float(input("Digite Yo: "))
X1=float(input("Digite X1: "))
Y1=float(input("Digite Y2: "))
X2=float(input("Digite X2: "))
Y2=float(input("Digite Y2: "))
c =(X1 - X0)*(Y2-Y0)*(X2-X0)*(Y1-Y0)
if(c<0):
	mensagem ="A direita da reta"
	print(mensagem)
elif(c>0):
	mensagem="A esquerda da reta"
	print(mensagem)
elif(c==0):
	mensagem="Sobre a reta"
	print(mensagem)


-- OUTPUT:
A esquerda da reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:41:58) 
-- CODE:
X0=float(input("Digite Xo: "))
Y0=float(input("Digite Yo: "))
X1=float(input("Digite X1: "))
Y1=float(input("Digite Y2: "))
X2=float(input("Digite X2: "))
Y2=float(input("Digite Y2: "))
c =(X1 - X0)*(Y2-Y0)-(X2-X0)*(Y1-Y0)
if(c<0):
	mensagem ="A direita da reta"
	print(mensagem)
elif(c>0):
	mensagem="A esquerda da reta"
	print(mensagem)
elif(c==0):
	mensagem="Sobre a reta"
	print(mensagem)


-- OUTPUT:
A esquerda da reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 19:42:10) 
-- CODE:
X0=float(input("Digite Xo: "))
Y0=float(input("Digite Yo: "))
X1=float(input("Digite X1: "))
Y1=float(input("Digite Y2: "))
X2=float(input("Digite X2: "))
Y2=float(input("Digite Y2: "))
c =(X1 - X0)*(Y2-Y0)-(X2-X0)*(Y1-Y0)
if(c<0):
	mensagem ="A direita da reta"
	print(mensagem)
elif(c>0):
	mensagem="A esquerda da reta"
	print(mensagem)
elif(c==0):
	mensagem="Sobre a reta"
	print(mensagem)


-- OUTPUT:
A esquerda da reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 19:42:24) 
-- CODE:
X0=float(input("Digite Xo: "))
Y0=float(input("Digite Yo: "))
X1=float(input("Digite X1: "))
Y1=float(input("Digite Y2: "))
X2=float(input("Digite X2: "))
Y2=float(input("Digite Y2: "))
c =(X1 - X0)*(Y2-Y0)-(X2-X0)*(Y1-Y0)
if(c<0):
	mensagem ="A direita da reta"
	print(mensagem)
elif(c>0):
	mensagem="A esquerda da reta"
	print(mensagem)
elif(c==0):
	mensagem="Sobre a reta"
	print(mensagem)


-- EXECUTION TIME:
0.200629
-- TEST CASE 1:
---- input:
1
4
3
5
9
9
---- correct output:
A esquerda da reta
---- user output:
A esquerda da reta
-- TEST CASE 2:
---- input:
9
8
6
5
2
1
---- correct output:
Sobre a reta
---- user output:
Sobre a reta
-- TEST CASE 3:
---- input:
0
0
0
1
1
1
---- correct output:
A direita da reta
---- user output:
A direita da reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
